[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groupme-push"
version = "0.0.1"
description = "GroupMe push service wrapper"
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
authors = [{ name = "Chris Cush", email = "chris@cuuush.com" }]
keywords = ["groupme", "push", "websocket"]
dependencies = [
    "base36 >= 0.1.1",
    "requests >= 2.28.1",
    "websocket-client >=1.4.0"
]
requires-python = ">=3.9"



[project.urls]
Homepage = "https://github.com/cuuush/groupme-push"

